# wtvr3d

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.html  sw.js  wtvr3d-demo-b7ec685f.js  wtvr3d-demo-b7ec685f.js.map
assets/materials/: lambert-beckmann.wmaterial  lambert-beckmann.wmatinstance  normal_map.wmaterial  normal_map.wmatinstance
assets/meshes/: head.wmesh  test_monkey-0.wmesh
demo/: .gitignore  index.html  package-lock.json  package.json
demo/assets/materials/: lambert-beckmann.wmaterial  lambert-beckmann.wmatinstance  lit_texture.wmaterial  lit_texture.wmatinstance  normal_map.wmaterial  normal_map.wmatinstance  test_uniform_color.wmaterial  test_with_override.wmatinstance  test_without_override.wmatinstance  unlit_texture.wmaterial  unlit_texture.wmatinstance
demo/assets/materials/shaders/: default_static.vert  default_static.vert.glsl  lit_diffuse.frag  uniform_color.frag  uniform_color.frag.glsl
demo/assets/meshes/: head.wmesh  test_monkey-0.wmesh
demo/components/lit-texture/: lit-texture.js
demo/components/lit-texture/src/: LitTexture.js
demo/components/unlit-texture/: unlit-texture.js
demo/components/unlit-texture/src/: UnlitTexture.js
demo/components/wtvr3d-demo/: wtvr3d-demo.js
demo/components/wtvr3d-demo/src/: Wtvr3dDemo.js
shaders/: package-lock.json  package.json
shaders/src/: default_static.vert  lambert-beckmann.frag
src/: error.rs  lib.rs
src/asset/: asset_registry.rs  constructible.rs  file.rs  material.rs  mesh.rs  mesh_deserializer.rs  mod.rs  texture.rs
src/component/: camera.rs  light.rs  mesh.rs  mod.rs  transform.rs
src/component/mesh/: mesh_data.rs  mod.rs
src/editor/: asset_database.rs  mod.rs
src/importers/: collada.rs  mod.rs
src/math/: color.rs  matrix.rs  mod.rs  quaternion.rs  vector.rs
src/mesh/: mesh_data.rs  mod.rs
src/renderer/: buffer.rs  light_repository.rs  material.rs  mesh.rs  mesh_data.rs  mesh_renderer.rs  mod.rs  shader_data_type.rs  uniform.rs  value.rs
src/scene/: component.rs  mod.rs  transform.rs
src/scene/component/: camera.rs  mod.rs
src/system/: lighting_system.rs  mod.rs  rendering_system.rs  scene_graph_system.rs  shader_compilation_system.rs
src/tests/: mod.rs
src/util/: mod.rs  regexp.rs
src/utils/: constants.rs  mod.rs  transfer_types.rs
