[package]
name = "wtvr3d"
version = "0.1.1"
authors = ["John Tiesselune <tiesse@wtvr.rocks>"]
edition = "2018"

[features]
default = []
debug = ['console_error_panic_hook']

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.48"
wasm-bindgen = "0.2.71"
nalgebra = "0.25.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
specs = "0.16.1"
specs-hierarchy = "0.6.0"
wtvr3d-file = { git = "https://github.com/wtvr-engine/wtvr3d-file" }
bincode = "1.3.2"

[dependencies.web-sys]
version = "0.3.48"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'HtmlImageElement',
  'WebGlTexture',
  'Window',
  'console',
]

[profile.release]
lto = true
opt-level = 's'