[package]
name = "wtvr3d"
version = "0.2.0"
authors = ["John Tiesselune <tiesse@wtvr.rocks>"]
edition = "2018"

[features]
default = []
debug = ['console_error_panic_hook']

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"
console_error_panic_hook = { version = "0.1.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.2"

[dependencies.web-sys]
version = "0.3.50"
features = [
  "WebGl2RenderingContext"
]

[profile.release]
lto = true
opt-level = 's'