[package]
name = "wtvr3d"
version = "0.2.0"
authors = ["John Tiesselune <tiesse@wtvr.rocks>"]
edition = "2018"

[features]
default = []
export = []
auto_material = ["regex", "lazy_static"]
import_collada = []
editor = ["export", "auto_material", "import_collada"]
debug = ['console_error_panic_hook']

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"
console_error_panic_hook = { version = "0.1.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.2"
regex = { version = "1", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[dependencies.web-sys]
version = "0.3.50"
features = [
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
]

[profile.release]
lto = true
opt-level = 's'